--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/FotballersAPI.WebHost/appsettings.Development.json
+/FotballersAPI.WebHost/appsettings.json
