--- a/FotballersAPI.WebHost/FotballersAPI.WebHost.csproj
+++ b/FotballersAPI.WebHost/FotballersAPI.WebHost.csproj
@@ -7,7 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FotballersAPI.Application\FotballersAPI.Application.csproj" />
+    <ProjectReference Include="..\FotballersAPI.Persistence\FotballersAPI.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
