Adding Email service, email layout message, rabbitMq, new controller action and code cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 /FotballersAPI.WebHost/appsettings.Development.json
 /FotballersAPI.WebHost/appsettings.json
+/EmailService/appsettings.Development.json
+/EmailService/appsettings.json
