--- a/FotballersAPI.Application/FotballersAPI.Application.csproj
+++ b/FotballersAPI.Application/FotballersAPI.Application.csproj
@@ -30,11 +30,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FotballerAPI.Helpers\FotballerAPI.Helpers.csproj" />
     <ProjectReference Include="..\FotballersAPI.Domain\FotballersAPI.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Functions\Users\Queries\" />
   </ItemGroup>
 
 </Project>
